@@ -1,9 +1,9 @@
 package gov.healthit.chpl.permissions.domain.attestation;
 
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -13,7 +13,7 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-import gov.healthit.chpl.attestation.domain.DeveloperAttestationSubmission;
+import gov.healthit.chpl.attestation.domain.AttestationSubmission;
 import gov.healthit.chpl.changerequest.dao.DeveloperCertificationBodyMapDAO;
 import gov.healthit.chpl.domain.CertificationBody;
 import gov.healthit.chpl.domain.Developer;
@@ -37,13 +37,13 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         MockitoAnnotations.initMocks(this);
 
         Mockito.when(resourcePermissions.getAllDevelopersForCurrentUser()).thenReturn(
-                Arrays.asList(Developer.builder().id(1L).build()));
+                List.of(Developer.builder().id(1L).build()));
 
         Mockito.when(resourcePermissions.getAllAcbsForCurrentUser()).thenReturn(
-                Arrays.asList(CertificationBodyDTO.builder().id(1L).build()));
+                List.of(CertificationBodyDTO.builder().id(1L).build()));
 
         Mockito.when(developerCertificationBodyMapDAO.getCertificationBodiesForDeveloper(ArgumentMatchers.anyLong())).thenReturn(
-                Arrays.asList(CertificationBody.builder().id(1L).build()));
+                List.of(CertificationBody.builder().id(1L).build()));
     }
 
     @Override
@@ -54,7 +54,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertTrue(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertTrue(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -66,7 +66,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         assertFalse(permissions.hasAccess());
 
         // Not used
-        assertTrue(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertTrue(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -77,7 +77,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertFalse(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -89,19 +89,15 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         assertFalse(permissions.hasAccess());
 
 
-        assertTrue(permissions.hasAccess(DeveloperAttestationSubmission.builder()
-                .developer(Developer.builder()
-                        .id(1L)
-                        .build())
+        assertTrue(permissions.hasAccess(AttestationSubmission.builder()
+                .developerId(1L)
                 .build()));
 
         Mockito.when(developerCertificationBodyMapDAO.getCertificationBodiesForDeveloper(ArgumentMatchers.anyLong())).thenReturn(
-                Arrays.asList(CertificationBody.builder().id(2L).build()));
+                List.of(CertificationBody.builder().id(2L).build()));
 
-        assertFalse(permissions.hasAccess(DeveloperAttestationSubmission.builder()
-                .developer(Developer.builder()
-                        .id(2L)
-                        .build())
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder()
+                .developerId(2L)
                 .build()));
     }
 
@@ -113,7 +109,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertFalse(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -124,7 +120,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertFalse(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -135,7 +131,7 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertFalse(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
 
     @Override
@@ -146,8 +142,6 @@ public class CreateActionPermissionsTest extends ActionPermissionsBaseTest {
         // Not used
         assertFalse(permissions.hasAccess());
 
-        assertFalse(permissions.hasAccess(new DeveloperAttestationSubmission()));
+        assertFalse(permissions.hasAccess(AttestationSubmission.builder().build()));
     }
-
-
 }
